# vis_avs

./: .clang-tidy  .gitignore  CMakeLists.txt  NEXT_STEPS.md  platform_shim.h
avs/ns-eel/: megabuf.c  megabuf.h  ns-eel-addfuncs.h  ns-eel-int.h  ns-eel.h  nseel-caltab.c  nseel-cfunc.c  nseel-compiler.c  nseel-eval.c  nseel-lextab.c  nseel-yylex.c  platform_shim_redirect.h
avs/vis_avs/: FRONTEND.H  Timing.h  VIS.H  ape.h  avs_eelif.cpp  avs_eelif.h  bpm.cpp  bpm.h  cfgwin.cpp  cfgwnd.h  draw.cpp  draw.h  ff_ipc.h  linedraw.cpp  main.cpp  matrix.cpp  portable_minimal.cpp  r_avi.cpp  r_blit.cpp  r_blur.cpp  r_bpm.cpp  r_bright.cpp  r_bspin.cpp  r_bump.cpp  r_chanshift.cpp  r_clear.cpp  r_colorfade.cpp  r_colorreduction.cpp  r_colorreplace.cpp  r_comment.cpp  r_contrast.cpp  r_dcolormod.cpp  r_ddm.cpp  r_defs.h  r_dmove.cpp  r_dotfnt.cpp  r_dotgrid.cpp  r_dotpln.cpp  r_fadeout.cpp  r_fastbright.cpp  (+49 more)
avs/vis_avs/apesdk/: avs_ape.h  avstut00.cpp  resource.h
avs/vis_avs/evallib/: CAL_TAB.C  Compiler.c  Compiler.h  LEX.H  cal_tab.h  cfunc.c  eval.c  eval.h
avs/vis_avs/laser/: LD32.H  laser.cpp  laserline.cpp  laserline.h  ld32.c  linelist.cpp  linelist.h  rl_beathold.cpp  rl_bren.cpp  rl_cones.cpp  rl_line.cpp  rl_trans.cpp
modern/: avs_runner.cpp  effect_base.h  effect_oscstar.cpp  effect_oscstar.h  effect_radial.h  fft_analyzer.cpp  fft_analyzer.h  preset_io.cpp  preset_io.h
standalone/: avs_runner.cpp  avs_standalone.cpp  effect_base.h  effect_oscstar.cpp  effect_oscstar.h  effect_radial.cpp  effect_radial.h  fft_analyzer.cpp  fft_analyzer.h  preset_io.h
